--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ body {
   font-size: 3.5rem;
   margin: 0;
   background: linear-gradient(to right, var(--primary), var(--secondary));
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
